# tartan-os

./: .editorconfig  .gitignore  .rustfmt.toml  CNAME  Cargo.toml  Dockerfile  README.md  check.sh  crates.js  docker-compose.yml  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
acpi/: Cargo.toml
acpi/src/: aml.rs  lib.rs
acpi/src/aml/: interpreter.rs  parse.rs
acpi/src/aml/parse/: test.rs
acpi/tests/parse/: README.md  compile-all.sh  main.rs
acpi/tests/parse/aml/: definitions.aml  empty.aml  methods.aml  scopes.aml  supernames.aml
acpi/tests/parse/asl/: definitions.asl  empty.asl  methods.asl  scopes.asl  supernames.asl
acpi/tests/parse/snapshots/: parse__definitions.snap  parse__empty.snap  parse__methods.snap  parse__scopes.snap  parse__supernames.snap
aml_parse/: all.html  fn.main.html  index.html  sidebar-items.js  struct.UsageError.html
arch/: Cargo.toml
arch/src/: aarch64.rs  arm.rs  lib.rs  x86.rs  x86_64.rs  x86_common.rs
arch/src/aarch64/: float.rs  interrupt.rs
arch/src/arm/: interrupt.rs
arch/src/x86/: protection.rs
arch/src/x86_64/: protection.rs
arch/src/x86_common/: features.rs  interrupt.rs  io.rs  paging.rs  protection.rs
devicetree/: Cargo.toml
devicetree/src/: blob.rs  lib.rs
devicetree/tests/blob/: compile-all.sh  main.rs
devicetree/tests/blob/dtb/: simple.dtb
devicetree/tests/blob/dts/: simple.dts
devicetree/tests/blob/snapshots/: blob__simple_mem_resrv.snap  blob__simple_structures.snap
doc/: crate-redirect.html
elf/: Cargo.toml
elf/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  arch.rs  cpu.rs  intrinsics.rs  main.rs  pci.rs
kernel/src/arch/: aarch64.rs  arm.rs  x86.rs  x86_64.rs  x86_common.rs
kernel/target-specs/: README.md  aarch64-unknown-tartan.json  arm-unknown-tartan.json  i686-unknown-tartan.json  x86_64-unknown-tartan.json
pci/: Cargo.toml
pci/src/: access.rs  config.rs  lib.rs
script/: boot.sh  make-boot-image.sh
search.index/: 009a26c4c448.js  00a742c46ebf.js  0170ff0fa083.js  01ab0a4ecc43.js  02232d5e5f24.js  0273c3bfa84a.js  0277658acc4d.js  028d87e66d2b.js  02c61716d03d.js  0304c3453d1b.js  03614368cdcb.js  03886cacb3c6.js  03c5b85c72e1.js  03f7036b484e.js  04062721d63c.js  061d2b2c1d5b.js  06aa89bd72de.js  06b83f2be121.js  06dfd9788f05.js  06e7b5f87d80.js  06ebd73782b9.js  06ed99a4417f.js  0714214d9c8f.js  0759d3557b59.js  076da735c484.js  079b201e01c9.js  079edf0d9edf.js  07e6a5c949d0.js  081121f0b5c4.js  082f903627fa.js  08759cdfffdb.js  0892ec8ebb80.js  08dd414c1d6f.js  08f165291e2b.js  0952cccf29cc.js  098a5d6fd397.js  09b89f5ad010.js  0a1fe5897b40.js  0a6dd8882c8c.js  0c53586a80a1.js  (+304 more)
serial/: Cargo.toml
serial/src/: lib.rs  model_16550.rs  model_pl011.rs
src/: acpi.rs  efi.rs  lib.rs  main.rs
tartan_acpi/: all.html  index.html  macro.parser_fn!.html  macro.parser_fn.html  macro.struct_parser.html  sidebar-items.js  struct.AccessSize.html  struct.AddressSpace.html  struct.DescriptionHeader.html  struct.FixedDescription.html  struct.FixedFlags.html  struct.GenericAddress.html  struct.RootDescriptionPointerV1.html  struct.RootDescriptionPointerV2.html
tartan_arch/: all.html  fn.jump.html  index.html  macro.aarch64_exception_vector_table!.html  macro.aarch64_exception_vector_table.html  macro.arm_exception_vector_table!.html  macro.arm_exception_vector_table.html  sidebar-items.js
tartan_bitfield/: all.html  fn.get_bit.html  fn.get_bits.html  fn.set_bit.html  fn.set_bits.html  index.html  macro.bitfield.html  macro.bitfield_accessors!.html  macro.bitfield_accessors.html  macro.bitfield_without_debug!.html  macro.bitfield_without_debug.html  sidebar-items.js  trait.Bitfield.html  trait.OverflowingShl.html  trait.OverflowingShr.html  trait.TruncateInto.html
tartan_c_enum/: all.html  index.html  macro.c_enum!.html  macro.c_enum.html  sidebar-items.js  trait.CEnum.html
tartan_devicetree/: all.html  index.html  sidebar-items.js  struct.MemoryReservation.html  struct.Value.html
tartan_elf/: all.html  index.html  sidebar-items.js  struct.Endianness.html  struct.FileClass.html  struct.FileType.html  struct.Header.html  struct.HeaderIdent.html  struct.Machine.html  struct.OSABI.html  struct.ProgramHeader32.html  struct.ProgramHeader64.html  struct.ProgramSegmentFlags.html  struct.ProgramSegmentType.html  struct.SectionFlags.html  struct.SectionHeader.html  struct.SectionType.html  type.HeaderNative.html  type.ProgramHeaderNative.html  type.SectionHeaderNative.html
tartan_kernel/: all.html  fn._start.html  fn.alloc_error.html  fn.eh_personality.html  fn.find_uart.html  fn.kernel_main.html  fn.main.html  fn.panic_handler.html  index.html  sidebar-items.js  static.ALLOCATOR.html  static.HEAP.html  static.X.html
tartan_parsers/: all.html  fn.cut.html  fn.opcode.html  fn.result_iterator.html  index.html  macro.struct_parser.html  sidebar-items.js
tartan_pci/: all.html  constant.INVALID_VENDOR.html  constant.MAX_DEVICE.html  constant.MAX_FUNCTION.html  fn.check_valid.html  fn.enumerate_bus.html  fn.enumerate_bus_devices.html  fn.enumerate_device_functions.html  fn.iter_capabilities.html  index.html  sidebar-items.js  struct.CapabilityEntry.html  struct.CommandRegister.html  struct.HeaderRegister0.html  struct.HeaderRegister1.html  struct.HeaderRegister2.html  struct.HeaderRegister3.html  struct.HeaderType.html  struct.SelfTest.html  struct.StatusRegister.html  trait.FixedConfigRegister.html
tartan_serial/: all.html  enum.Parity.html  index.html  sidebar-items.js  (+4 more)
uefi/: Cargo.toml  build.rs
uefi/.cargo/: config.toml
uefi/script/: attach-gdb.sh  boot.sh  build-and-boot.sh  get-pe-image-base.py  make-boot-image.sh  pe_format.py  set-pe-machine-type.py
uefi/src/: allocator.rs  global.rs  intrinsics.rs  io.rs  lib.rs  main.rs
uefi/target-specs/: README.md  aarch64-unknown-uefi.json  arm-unknown-uefi.json  i686-unknown-uefi.json  thumbv7a-unknown-uefi.json  x86_64-unknown-uefi.json
util/parsers/: Cargo.toml
util/parsers/src/: error.rs  lib.rs
(+503 files in other folders)
