[package]
name = "tartan-os"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
utf16_lit = "1.0.0"
crc-any = {version = "2.3.5", default-features = false}
bitflags = "1.2.1"
