[package]
name = "tartan-os"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
rlibc = "1.0.0"
utf16_lit = "1.0.0"
crc-any = {version = "2.3.5", default-features = false}
bitflags = "1.2.1"
static_assertions = "1.1.0"
nom = {version = "5.1.2", features = ["alloc"], default-features = false}
