[package]
name = "tartan-acpi"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# Internal
tartan-c-enum = {path = "../util/c_enum"}
tartan-parsers = {path = "../util/parsers"}
# External
bitflags = "1.2.1"
static_assertions = "1.1.0"
nom = {version = "5.1.2", features = ["alloc"], default-features = false}

[dev-dependencies]
insta = {version = "0.16.1", features = ["glob"]}
