[package]
name = "tartan-acpi"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# Internal
tartan-parsers = {path = "../util/parsers"}
# External
static_assertions = "1.1.0"
tartan-bitfield = "1.0.0"
tartan-c-enum = "1.0.0"
nom = {version = "6.2.1", features = ["alloc"], default-features = false}

[dev-dependencies]
insta = {version = "0.16.1", features = ["glob"]}
