[package]
name = "tartan-arch"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# External
paste = "1.0.0"
static_assertions = "1.1.0"
tartan-bitfield = "1.0.0"
tartan-c-enum = "1.0.0"
