[package]
name = "tartan-devicetree"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# Internal
tartan-parsers = {path = "../util/parsers"}
# External
nom = {version = "6.0.0", features = ["alloc"], default-features = false}

[dev-dependencies]
insta = {version = "0.16.1", features = ["glob"]}
