[package]
name = "tartan-kernel"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# Internal
tartan-bitfield = {path = "../util/bitfield"}
tartan-pci = {path = "../pci"}
tartan-serial = {path = "../serial"}
# External
static_assertions = "1.1.0"
