[package]
name = "tartan-pci"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# Internal
tartan-arch = {path = "../arch"}
tartan-bitfield = {path = "../util/bitfield"}
# External
log = "0.4.11"
