[package]
name = "tartan-pci"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# Internal
tartan-arch = {path = "../arch"}
# External
log = "0.4.11"
tartan-bitfield = "1.0.0"
