[package]
name = "tartan-uefi"
version = "0.1.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cimbul/tartan-os"
publish = false

[dependencies]
# Internal
tartan-acpi = {path = "../acpi"}
tartan-arch = {path = "../arch"}
tartan-devicetree = {path = "../devicetree"}
tartan-elf = {path = "../elf"}
tartan-pci = {path = "../pci"}
# External
cfg-if = "1.0.0"
crc-any = {version = "2.4.3", default-features = false}
log = "0.4.17"
tartan-bitfield = "1.2.0"
tartan-c-enum = "1.0.0"
utf16_lit = "2.0.2"
